--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -83,8 +83,7 @@
                     android:layout_marginTop="3dp"
                     android:layout_marginEnd="3dp"
                     android:layout_marginBottom="3dp"
-                    android:scaleType="centerInside"
-                    app:srcCompat="@drawable/ic_launcher_background" />
+                    android:scaleType="centerInside" />
 
                 <ImageButton
                     android:id="@+id/imageButtonDetachImage1"
@@ -109,8 +108,7 @@
                     android:layout_marginTop="3dp"
                     android:layout_marginEnd="3dp"
                     android:layout_marginBottom="3dp"
-                    android:scaleType="centerInside"
-                    app:srcCompat="@drawable/ic_launcher_background" />
+                    android:scaleType="centerInside" />
 
                 <ImageButton
                     android:id="@+id/imageButtonDetachImage2"
